outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-23_13-25-11/evaluations/problem_eval8502755806017237883_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance (measured by betweenness centrality) and a reinforcement learning-inspired mechanism that updates node preferences based on historical selection frequency, while maintaining stochastic selection through a temperature parameter that adapts to both remaining nodes and historical performance.}
                                                                                                                                                                                                                                                                                                                 ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance (measured by betweenness centrality) and a reinforcement learning-inspired mechanism that updates node preferences based on historical selection frequency, while maintaining stochastic selection through a temperature parameter that adapts to both remaining nodes and historical performance.}
                                                                                                                                                                                                                                                                                                                 ^
SyntaxError: unmatched '}'
